@@ -1,5 +1,5 @@
 /*
-    Copyright 2009-2016, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2009-2017, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -55,7 +55,7 @@ struct hash_impl : public fostlib::digester::impl {
 };
 
 
-fostlib::digester::digester( fostlib::string (*hash)( const fostlib::string & ) ) {
+fostlib::digester::digester(digester_fn hash) {
     if ( hash == fostlib::sha1 ) {
         m_implementation = std::make_unique<hash_impl<CryptoPP::SHA1>>();
     } else if ( hash == fostlib::sha256 ) {
