@@ -1,5 +1,5 @@
 /*
-    Copyright 2008-2015, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2008-2017, Felspar Co Ltd. http://fost.3.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -8,6 +8,7 @@
 
 #include "fost-crypto-test.hpp"
 #include <fost/crypto>
+#include <fost/unicode>
 
 
 FSL_TEST_SUITE( digests );
@@ -15,12 +16,12 @@ FSL_TEST_SUITE( digests );
 
 FSL_TEST_FUNCTION( sha1 ) {
     // http://en.wikipedia.org/wiki/Examples_of_SHA_digests
-    FSL_CHECK_EQ( fostlib::sha1( fostlib::string() ),
-        L"da39a3ee5e6b4b0d3255bfef95601890afd80709" );
-    FSL_CHECK_EQ( fostlib::sha1( L"The quick brown fox jumps over the lazy dog" ),
-        L"2fd4e1c67a2d28fced849ee1bb76e7391b93eb12" );
-    FSL_CHECK_EQ( fostlib::sha1( L"The quick brown fox jumps over the lazy cog" ),
-        L"de9f2c7fd25e1b3afad3e85a0bd17d9b100db4b3" );
+    FSL_CHECK_EQ( fostlib::sha1(fostlib::string()),
+        L"da39a3ee5e6b4b0d3255bfef95601890afd80709");
+    FSL_CHECK_EQ( fostlib::sha1("The quick brown fox jumps over the lazy dog" ),
+        L"2fd4e1c67a2d28fced849ee1bb76e7391b93eb12");
+    FSL_CHECK_EQ( fostlib::sha1("The quick brown fox jumps over the lazy cog" ),
+        L"de9f2c7fd25e1b3afad3e85a0bd17d9b100db4b3");
 }
 
 
